fixed responsive mode on mobile for the new template, ensuring the body width expands to the edge of the phone

--- a/assets/style.css
+++ b/assets/style.css
@@ -374,3 +374,13 @@ a.post-tag:focus {
     font-family: 'Open Sans','Helvetica','Arial',sans-serif;
 }
 
+@media screen and (max-width: 800px) {
+    [data-layoutversion="2"] {
+        margin-left: -0.9em !important;
+        margin-right: -0.9em !important;
+    }
+    [data-layoutversion="2"] .post-content  {
+        padding-left: 1em !important;
+        padding-right: 1em !important;
+    }
+}
